apps/sportif-ml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sportif-ml-ingress
  namespace: sportif-ml
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: 2g
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - annotate.churchlify.com
        - mlflow.churchlify.com
      secretName: sportif-ml-tls
  rules:
    - host: annotate.churchlify.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cvat
                port:
                  number: 8080
    - host: mlflow.churchlify.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mlflow
                port:
                  number: 5000
